# MiniDevin

./: README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/services/: file_service.py  openai_service.py
backend/tests/: test_health.py
frontend/: .env  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AuthButtons.tsx  AuthStatus.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  FileSystem.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
